// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogTitle > should allow for the Typography component defaults to be overwritten 1`] = `
<h3
  class="rmd-typography rmd-typography--caption rmd-no-margin-bottom rmd-dialog__title"
>
  Title
</h3>
`;

exports[`DialogTitle > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<h2
  class="rmd-typography rmd-typography--headline-4 rmd-no-margin rmd-dialog__title"
>
  Title
</h2>
`;

exports[`DialogTitle > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<h2
  class="rmd-typography rmd-typography--headline-4 rmd-no-margin rmd-dialog__title custom-class-name"
  style="color: white;"
>
  Title
</h2>
`;
